<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>es.elixir.bsc.elixibilitas</groupId>
        <artifactId>openebench-tools-importer</artifactId>
        <version>0.1-SNAPSHOT</version>
    </parent>

    <artifactId>openebench-repo</artifactId>
    <packaging>jar</packaging>

    <developers>
        <developer>
          <id>redmitry</id>
          <name>Dmitry Repchevsky</name>
          <email>redmitry@list.ru</email>
        </developer>
    </developers>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    
    <dependencies>

        <dependency>
            <groupId>es.elixir.bsc.elixibilitas</groupId>
            <artifactId>openebench-tools-model</artifactId>
            <version>0.1-SNAPSHOT</version>
            <type>jar</type>
        </dependency>

        <dependency>
            <groupId>org.glassfish</groupId>
            <artifactId>javax.json</artifactId>
            <version>1.1</version>
            <type>jar</type>
        </dependency>

        <dependency>
            <groupId>org.eclipse</groupId>
            <artifactId>yasson</artifactId>
            <version>1.0.3</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.10</version>
            <scope>test</scope>
            <type>jar</type>
        </dependency>

    </dependencies>

</project>

